AG-8094 - Prevent <kbd> elements overlaping across lines

--- a/grid-packages/ag-grid-docs/documentation/src/templates/doc-page.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/templates/doc-page.module.scss
@@ -151,20 +151,6 @@
         }
     }
 
-    kbd {
-        background-color: #f7f7f7;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-        box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px #fff inset;
-        color: #333;
-        display: inline-block;
-        font-family: Arial, Helvetica, sans-serif;
-        line-height: 1.4;
-        margin: 0 0.1em;
-        padding: 0.1em 0.6em;
-        text-shadow: 0 1px 0 #fff;
-    }
-
     ul li > p {
         margin-bottom: 0.25rem;
     }
